Try to navigate to the right place from papermill

--- a/notebooks/tinybase/Shell.ipynb
+++ b/notebooks/tinybase/Shell.ipynb
@@ -11,7 +11,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d4e54a8ed92444e48502ea9c35497c00",
+       "model_id": "214e14a0e17d41a9a4ddcf202ac556cc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -22,7 +22,7 @@
     }
    ],
    "source": [
-    "from pathlib import Path\n",
+    "from pathlib import Path \n",
     "\n",
     "from pyiron_contrib.tinybase.shell import ShellTask"
    ]
@@ -34,7 +34,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cwd = Path.cwd()"
+    "cwd = Path.cwd()\n",
+    "if cwd.name == \"tinybase\":\n",
+    "    # Then the notebook was started locally\n",
+    "    notebook_dir = cwd\n",
+    "else:\n",
+    "    # We are probably executing from papermill on the CI\n",
+    "    notebook_dir = cwd / \"notebooks\" / \"tinybase\""
    ]
   },
   {
@@ -88,7 +94,7 @@
    "source": [
     "sh.input.command = 'echo'\n",
     "sh.input.arguments = ['foo']\n",
-    "sh.input.working_directory = cwd"
+    "sh.input.working_directory = notebook_dir"
    ]
   },
   {
@@ -172,7 +178,7 @@
    "source": [
     "sh.input.command = 'pwd'\n",
     "sh.input.arguments = []\n",
-    "sh.input.working_directory = cwd"
+    "sh.input.working_directory = notebook_dir"
    ]
   },
   {
@@ -264,7 +270,7 @@
    "source": [
     "sh.input.command = 'sh'\n",
     "sh.input.arguments = ['-c', 'echo foo; echo bar 1>&2; exit 2']\n",
-    "sh.input.working_directory = cwd"
+    "sh.input.working_directory = notebook_dir"
    ]
   },
   {
@@ -402,7 +408,7 @@
    "source": [
     "sh.input.command = 'sh'\n",
     "sh.input.arguments = ['-c', 'echo foo; echo bar 1>&2; exit 2']\n",
-    "sh.input.working_directory = cwd"
+    "sh.input.working_directory = notebook_dir"
    ]
   },
   {
@@ -552,7 +558,7 @@
    "source": [
     "sh.input.command = 'sh'\n",
     "sh.input.arguments = ['-c', 'echo $FOO; echo $BAR 1>&2']\n",
-    "sh.input.working_directory = cwd"
+    "sh.input.working_directory = notebook_dir"
    ]
   },
   {
@@ -699,7 +705,7 @@
    },
    "outputs": [],
    "source": [
-    "state.settings.resource_paths.insert(0, str(cwd / \"resources\"))"
+    "state.settings.resource_paths.insert(0, str(notebook_dir / \"resources\"))"
    ]
   },
   {
@@ -773,7 +779,7 @@
     {
      "data": {
       "text/plain": [
-       "['1.2.4', '1.2.3']"
+       "['1.2.3', '1.2.4']"
       ]
      },
      "execution_count": 42,
@@ -807,7 +813,7 @@
    "outputs": [],
    "source": [
     "sh.input.command = res\n",
-    "sh.input.working_directory = cwd"
+    "sh.input.working_directory = notebook_dir"
    ]
   },
   {
@@ -944,7 +950,7 @@
    "outputs": [],
    "source": [
     "sh.input.command = ExecutablePathResolver('test', 'hello', version='1.2.4')\n",
-    "sh.input.working_directory = cwd"
+    "sh.input.working_directory = notebook_dir"
    ]
   },
   {
@@ -1058,7 +1064,7 @@
    "outputs": [],
    "source": [
     "sh.input.command = ExecutablePathResolver('test', 'hello')\n",
-    "sh.input.working_directory = cwd"
+    "sh.input.working_directory = notebook_dir"
    ]
   },
   {
@@ -1072,7 +1078,7 @@
     {
      "data": {
       "text/plain": [
-       "['1.2.4', '1.2.3']"
+       "['1.2.3', '1.2.4']"
       ]
      },
      "execution_count": 58,
