WIP reduce storable

--- a/notebooks/tinybase/TinyJob.ipynb
+++ b/notebooks/tinybase/TinyJob.ipynb
@@ -17,19 +17,11 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/poul/pyiron/contrib/pyiron_contrib/__init__.py:9: UserWarning: pyiron module not found, importing Project from pyiron_base\n",
-      "  warnings.warn(\"pyiron module not found, importing Project from pyiron_base\")\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.48 s, sys: 980 ms, total: 2.46 s\n",
-      "Wall time: 1.47 s\n"
+      "CPU times: user 1.83 s, sys: 1.81 s, total: 3.63 s\n",
+      "Wall time: 3.63 s\n"
      ]
     }
    ],
@@ -114,7 +106,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "71760bb018a94c31bbf2d9ee9add377e",
+       "model_id": "654dc73a511149ee9c8b72065cae63b3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -167,7 +159,7 @@
     {
      "data": {
       "text/plain": [
-       "<pyiron_contrib.tinybase.executor.ExecutionContext at 0x7fbcbcb4bc50>"
+       "<pyiron_contrib.tinybase.executor.ExecutionContext at 0x7fe6f1f21310>"
       ]
      },
      "execution_count": 9,
@@ -213,7 +205,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7ba2d6e222434c8e8f0dd80cf8edbb90",
+       "model_id": "947c865e83d04d2186cd22ada99620eb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -296,49 +288,49 @@
      "output_type": "stream",
      "text": [
       "       Step     Time          Energy         fmax\n",
-      "LBFGS:    0 18:00:52       11.288146      189.5231\n",
-      "LBFGS:    1 18:00:52        1.168671       43.6957\n",
-      "LBFGS:    2 18:00:52        0.860403       38.6924\n",
-      "LBFGS:    3 18:00:52        0.362400       30.3554\n",
-      "LBFGS:    4 18:00:52        0.004806       24.0865\n",
-      "LBFGS:    5 18:00:52       -0.267437       19.0615\n",
-      "LBFGS:    6 18:00:52       -0.471646       15.0628\n",
-      "LBFGS:    7 18:00:52       -0.623506       11.8810\n",
-      "LBFGS:    8 18:00:52       -0.735237        9.3518\n",
-      "LBFGS:    9 18:00:52       -0.816458        7.3435\n",
-      "LBFGS:   10 18:00:52       -0.874705        5.7512\n",
-      "LBFGS:   11 18:00:52       -0.915849        4.4909\n",
-      "LBFGS:   12 18:00:52       -0.944435        3.4955\n",
-      "LBFGS:   13 18:00:53       -0.963943        2.7113\n",
-      "LBFGS:   14 18:00:53       -0.977006        2.0956\n",
-      "LBFGS:   15 18:00:53       -0.985585        1.6137\n",
-      "LBFGS:   16 18:00:53       -0.991109        1.2382\n",
-      "LBFGS:   17 18:00:53       -0.994598        0.9468\n",
-      "LBFGS:   18 18:00:53       -0.996763        0.7216\n",
-      "LBFGS:   19 18:00:53       -0.998083        0.5484\n",
-      "LBFGS:   20 18:00:53       -0.998876        0.4157\n",
-      "LBFGS:   21 18:00:53       -0.999347        0.3144\n",
-      "LBFGS:   22 18:00:53       -0.999623        0.2374\n",
-      "LBFGS:   23 18:00:53       -0.999784        0.1790\n",
-      "LBFGS:   24 18:00:53       -0.999877        0.1348\n",
-      "LBFGS:   25 18:00:53       -0.999930        0.1014\n",
-      "LBFGS:   26 18:00:53       -0.999960        0.0762\n",
-      "LBFGS:   27 18:00:53       -0.999977        0.0573\n",
-      "LBFGS:   28 18:00:53       -0.999987        0.0430\n",
-      "LBFGS:   29 18:00:53       -0.999993        0.0323\n",
-      "LBFGS:   30 18:00:53       -0.999996        0.0242\n",
-      "LBFGS:   31 18:00:53       -0.999998        0.0182\n",
-      "LBFGS:   32 18:00:53       -0.999999        0.0136\n",
-      "LBFGS:   33 18:00:53       -0.999999        0.0102\n",
-      "LBFGS:   34 18:00:53       -1.000000        0.0077\n",
-      "LBFGS:   35 18:00:53       -1.000000        0.0058\n",
-      "LBFGS:   36 18:00:53       -1.000000        0.0043\n",
-      "LBFGS:   37 18:00:53       -1.000000        0.0032\n",
-      "LBFGS:   38 18:00:53       -1.000000        0.0024\n",
-      "LBFGS:   39 18:00:53       -1.000000        0.0018\n",
-      "LBFGS:   40 18:00:53       -1.000000        0.0014\n",
-      "LBFGS:   41 18:00:53       -1.000000        0.0010\n",
-      "LBFGS:   42 18:00:53       -1.000000        0.0008\n"
+      "LBFGS:    0 17:22:41       11.288146      189.5231\n",
+      "LBFGS:    1 17:22:41        1.168671       43.6957\n",
+      "LBFGS:    2 17:22:41        0.860403       38.6924\n",
+      "LBFGS:    3 17:22:41        0.362400       30.3554\n",
+      "LBFGS:    4 17:22:41        0.004806       24.0865\n",
+      "LBFGS:    5 17:22:41       -0.267437       19.0615\n",
+      "LBFGS:    6 17:22:41       -0.471646       15.0628\n",
+      "LBFGS:    7 17:22:41       -0.623506       11.8810\n",
+      "LBFGS:    8 17:22:41       -0.735237        9.3518\n",
+      "LBFGS:    9 17:22:41       -0.816458        7.3435\n",
+      "LBFGS:   10 17:22:41       -0.874705        5.7512\n",
+      "LBFGS:   11 17:22:41       -0.915849        4.4909\n",
+      "LBFGS:   12 17:22:41       -0.944435        3.4955\n",
+      "LBFGS:   13 17:22:41       -0.963943        2.7113\n",
+      "LBFGS:   14 17:22:41       -0.977006        2.0956\n",
+      "LBFGS:   15 17:22:41       -0.985585        1.6137\n",
+      "LBFGS:   16 17:22:41       -0.991109        1.2382\n",
+      "LBFGS:   17 17:22:41       -0.994598        0.9468\n",
+      "LBFGS:   18 17:22:41       -0.996763        0.7216\n",
+      "LBFGS:   19 17:22:41       -0.998083        0.5484\n",
+      "LBFGS:   20 17:22:41       -0.998876        0.4157\n",
+      "LBFGS:   21 17:22:41       -0.999347        0.3144\n",
+      "LBFGS:   22 17:22:41       -0.999623        0.2374\n",
+      "LBFGS:   23 17:22:41       -0.999784        0.1790\n",
+      "LBFGS:   24 17:22:41       -0.999877        0.1348\n",
+      "LBFGS:   25 17:22:41       -0.999930        0.1014\n",
+      "LBFGS:   26 17:22:41       -0.999960        0.0762\n",
+      "LBFGS:   27 17:22:41       -0.999977        0.0573\n",
+      "LBFGS:   28 17:22:41       -0.999987        0.0430\n",
+      "LBFGS:   29 17:22:41       -0.999993        0.0323\n",
+      "LBFGS:   30 17:22:41       -0.999996        0.0242\n",
+      "LBFGS:   31 17:22:41       -0.999998        0.0182\n",
+      "LBFGS:   32 17:22:41       -0.999999        0.0136\n",
+      "LBFGS:   33 17:22:41       -0.999999        0.0102\n",
+      "LBFGS:   34 17:22:41       -1.000000        0.0077\n",
+      "LBFGS:   35 17:22:42       -1.000000        0.0058\n",
+      "LBFGS:   36 17:22:42       -1.000000        0.0043\n",
+      "LBFGS:   37 17:22:42       -1.000000        0.0032\n",
+      "LBFGS:   38 17:22:42       -1.000000        0.0024\n",
+      "LBFGS:   39 17:22:42       -1.000000        0.0018\n",
+      "LBFGS:   40 17:22:42       -1.000000        0.0014\n",
+      "LBFGS:   41 17:22:42       -1.000000        0.0010\n",
+      "LBFGS:   42 17:22:42       -1.000000        0.0008\n"
      ]
     }
    ],
@@ -495,7 +487,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "be766dcb9b574096a4f5eec1db05ac17",
+       "model_id": "40689eb3b8204a098a6e8bde70590787",
        "version_major": 2,
        "version_minor": 0
       },
@@ -575,7 +567,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ac4af2962e3743f59a4aa681042b0271",
+       "model_id": "7a2918ed19d14d68b14f4517f05c2104",
        "version_major": 2,
        "version_minor": 0
       },
@@ -652,8 +644,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.53 s, sys: 1.1 s, total: 3.64 s\n",
-      "Wall time: 35.1 s\n"
+      "CPU times: user 2.79 s, sys: 946 ms, total: 3.73 s\n",
+      "Wall time: 20.1 s\n"
      ]
     }
    ],
@@ -1247,7 +1239,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.8"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
